--- a/tp/Exercises_AI1b_InformedSearch_Notebook_ToComplete.ipynb
+++ b/tp/Exercises_AI1b_InformedSearch_Notebook_ToComplete.ipynb
@@ -614,8 +614,8 @@
     "        row = col = side - 1\n",
     "    else:\n",
     "        # otherwise it is sequential, starting at 1\n",
-    "        row = number // side\n",
-    "        col = number % side - 1\n",
+    "        row = (number-1) // side\n",
+    "        col = (number-1) % side - 1\n",
     "    return (row, col)\n",
     "\n",
     "def h1(state):\n",
