--- a/tp/Exercises_AI2_AdversarialSearch_Notebook_ToComplete.ipynb
+++ b/tp/Exercises_AI2_AdversarialSearch_Notebook_ToComplete.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,8 +60,15 @@
     "    \n",
     "    def update_winner(self):\n",
     "        # function that tests objective and update the winner accordingly\n",
-    "        # sholud return 1, 2 or 0 (draw)\n",
+    "        # should return 1, 2 or 0 (draw)\n",
     "        # Your Code Here\n",
+    "        if self.count_lines(4, 1) > 0:\n",
+    "            self.winner = 1\n",
+    "        elif self.count_lines(4, 2) > 0:\n",
+    "            self.winner = 2\n",
+    "        elif len(self.available_moves) == 0:\n",
+    "            self.winner = 0\n",
+    "        return self.winner\n",
     "\n",
     "    \n",
     "    def check_line(self, n, player, values):\n",
@@ -81,12 +88,23 @@
     "                    num_lines += 1\n",
     "                if row < NUM_ROWS - 3 and self.check_line(n, player, [self.board[row][col], self.board[row+1][col], self.board[row+2][col], self.board[row+3][col]]):\n",
     "                    num_lines += 1\n",
-    "                 # Your Code Here\n",
+    "                if row < NUM_ROWS - 3 and col < NUM_COLS - 3 and self.check_line(n, player, [self.board[row][col], self.board[row+1][col+1], self.board[row+2][col+2], self.board[row+3][col+3]]):\n",
+    "                    num_lines += 1\n",
+    "                if row < NUM_ROWS - 3 and col > 3 and self.check_line(n, player, [self.board[row][col], self.board[row-1][col-1], self.board[row-2][col-2], self.board[row-3][col-3]]):\n",
+    "                    num_lines += 1\n",
+    "                \n",
     "        return num_lines\n",
     "    \n",
     "    # c3)\n",
     "    def central(self, player):\n",
-    "        # Your Code Here\n",
+    "        total = 0\n",
+    "        for row in range(NUM_ROWS):\n",
+    "            for col in range(NUM_COLS):\n",
+    "                if col == 3 and self.board[row][col] == player:\n",
+    "                    total += 2\n",
+    "                elif (col == 2 or col == 4) and self.board[row][col] == player:\n",
+    "                    total += 1\n",
+    "        return total\n",
     "\n",
     "class ConnectFourGame:\n",
     "    \n",
@@ -119,7 +137,12 @@
     "        \n",
     "        results = [0, 0, 0] # [draws, player 1 victories, player 2 victories]\n",
     "        \n",
-    "        # Your Code Here\n",
+    "        cur_match = 1\n",
+    "        while cur_match < n:\n",
+    "            self.start()\n",
+    "            results[self.state.winner] += 1\n",
+    "            cur_match += 1\n",
+    "\n",
     "     \n",
     "        print(\"\\n=== Elapsed time: %s seconds ===\" % (int(time.time() - start_time)))\n",
     "        print(f\"  Player 1: {results[1]} victories\")\n",
@@ -151,19 +174,67 @@
     "    move = random.choice(game.state.available_moves)\n",
     "    game.state = game.state.move(move)\n",
     "    \n",
-    "#def execute_minimax_move(evaluate_func, depth):\n",
+    "def execute_minimax_move(evaluate_func, depth):\n",
+    "    best_move = None\n",
+    "    best_eval = float('-inf')\n",
+    "    for move in game.state.available_moves:\n",
+    "        new_state = game.state.move(move)\n",
+    "        new_state_eval = minimax(new_state, depth - 1, float('-inf'), float('inf'),False, game.state.player, evaluate_func)\n",
+    "        if new_state_eval > best_eval:\n",
+    "            best_move = new_state\n",
+    "            best_eval = new_state_eval\n",
+    "    game.state = best_move\n",
     "\n",
-    "        # Your Code Here\n",
-    "\n",
-    "#def minimax(state, depth, alpha, beta, maximizing, player, evaluate_func):\n",
-    "        # Your Code Here\n"
+    "def minimax(state, depth, alpha, beta, maximizing, player, evaluate_func):\n",
+    "    if depth == 0 or state.winner != -1:\n",
+    "        return evaluate_func(state) * (1 if player == 1 else -1)\n",
+    "    if maximizing:\n",
+    "        max_eval = float(-inf)\n",
+    "        for move in state.available_moves:\n",
+    "            new_state = state.move(move)\n",
+    "            eval = minimax(new_state, depth - 1, alpha, beta, False, player, evaluate_func)\n",
+    "            alpha = max(max_eval, eval)\n",
+    "            if beta <= alpha:\n",
+    "                break\n",
+    "        return max_eval\n",
+    "    else:\n",
+    "        min_eval = float(inf)\n",
+    "        for move in state.available_moves:\n",
+    "            new_state = state.move(move)\n",
+    "            eval = minimax(new_state, depth - 1, alpha, beta, True, player, evaluate_func)\n",
+    "            beta = min(min_eval, eval)\n",
+    "            if alpha <= beta:\n",
+    "                break\n",
+    "        return min_eval\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "End of game! Player 2 wins!\n",
+      "End of game! Player 2 wins!\n",
+      "End of game! Player 1 wins!\n",
+      "End of game! Player 2 wins!\n",
+      "End of game! Player 1 wins!\n",
+      "End of game! Player 2 wins!\n",
+      "End of game! Player 1 wins!\n",
+      "End of game! Player 2 wins!\n",
+      "End of game! Player 1 wins!\n",
+      "\n",
+      "=== Elapsed time: 0 seconds ===\n",
+      "  Player 1: 4 victories\n",
+      "  Player 2: 5 victories\n",
+      "  Draws: 0 \n",
+      "===============================\n"
+     ]
+    }
+   ],
    "source": [
     "# Random vs random\n",
     "game = ConnectFourGame(execute_random_move, execute_random_move)\n",
@@ -172,9 +243,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Minimax (f1, depth = 2) vs random\u001b[39;00m\n\u001b[0;32m      2\u001b[0m game \u001b[39m=\u001b[39m ConnectFourGame(execute_minimax_move(evaluate_f1, \u001b[39m2\u001b[39m), execute_random_move)\n\u001b[1;32m----> 3\u001b[0m game\u001b[39m.\u001b[39;49mrun_n_matches(\u001b[39m10\u001b[39;49m, \u001b[39m120\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[15], line 119\u001b[0m, in \u001b[0;36mConnectFourGame.run_n_matches\u001b[1;34m(self, n, max_time, log_moves)\u001b[0m\n\u001b[0;32m    117\u001b[0m cur_match \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m    118\u001b[0m \u001b[39mwhile\u001b[39;00m cur_match \u001b[39m<\u001b[39m n:\n\u001b[1;32m--> 119\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstart()\n\u001b[0;32m    120\u001b[0m     results[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstate\u001b[39m.\u001b[39mwinner] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m    121\u001b[0m     cur_match \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "Cell \u001b[1;32mIn[15], line 97\u001b[0m, in \u001b[0;36mConnectFourGame.start\u001b[1;34m(self, log_moves)\u001b[0m\n\u001b[0;32m     95\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m     96\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstate\u001b[39m.\u001b[39mplayer \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m---> 97\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mplayer_1_ai(\u001b[39mself\u001b[39;49m)\n\u001b[0;32m     98\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     99\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mplayer_2_ai(\u001b[39mself\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "# Minimax (f1, depth = 2) vs random\n",
     "game = ConnectFourGame(execute_minimax_move(evaluate_f1, 2), execute_random_move)\n",
