--- a/proj2/airline_delay_notebook.ipynb
+++ b/proj2/airline_delay_notebook.ipynb
@@ -437,7 +437,7 @@
     "The dataset contains 8 columns:\n",
     " - Flight: Number of the flight. Probably an ID, but not unique, since, from what we read, the flight numbers can be repeated.\n",
     " - Time: Time of departure. Ranges from 10 to 1439. The creator of the dataset specified in one of the comments in Kaggle that it is in minutes, where 1439 is equivalent to 23:59 for example\n",
-    " - Length: Length of the flight in minutes. Length has some zero values that need to be removed\n",
+    " - Length: Length of the flight (time or distance?). Length has some zero values that need to be removed\n",
     " - Airline: Id of the Airline that operated the flight.\n",
     " - AirportFrom and AirportTo: The origin and destinations airports. The list of airports is the same.\n",
     " - DayOfWeek: Day of the week, where 1 is Monday and 7 is Sunday according to the creator of the dataset\n",
@@ -751,6 +751,14 @@
     "\n",
     "for i in df.columns:\n",
     "    plots(df, i)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's se the balance between the column Class"
    ]
   },
   {
@@ -1861,7 +1869,7 @@
     "\n",
     "We chose 4 algorithms: KNN, Decision Tree, Gradient Boosting and MultiLayer Perceptron.\n",
     "\n",
-    "For the first two algorithms, we also used cross validation to choose the best parameters. We also wanted to use it for the lasty two, but the time required to run was too big.\n",
+    "For the first two algorithms, we also used cross validation to choose the best parameters. We also wanted to use it for the last two, but the time required to run was too big.\n",
     "\n",
     "For all the algorithms, the metrics we chose were F1, Recall, Precision and Accuracy, since these are usually good metrics for classification problems. We also provided a confusion matrix for visualization purposes.\n",
     "\n",
@@ -1873,7 +1881,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Defining Training and testing Sets"
+    "### 2.1 Defining Training and Testing Sets"
    ]
   },
   {
@@ -2560,7 +2568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the results we have, we can see the differences between algorithms and between the wo datasets tried are not very significant.\n",
+    "From the results we have, we can see the differences between algorithms and between the two datasets tried are not very significant.\n",
     "\n",
     "In the table below, we can see the accuracies don't vary that much (between 58.29% and 65.06%). The same can be said for the other metrics.\n",
     "\n",
